# analog-programming

./: .gitignore  CMakeLists.txt  MNIST_MODEL.md  RESONATOR_NETWORK.md
src/: main.cpp  mnist_archive_main.cpp  mnist_main.cpp
src/classification/: classifier.cpp  classifier.hpp  prototype.cpp  prototype.hpp
src/core/: function.cpp  function.hpp  interaction.cpp  interaction.hpp  transform.cpp  transform.hpp  wave.cpp  wave.hpp
src/encoding/: encoder.hpp  sample.hpp
src/encoding/mnist/: mnist_encoder.cpp  mnist_encoder.hpp  mnist_loader.cpp  mnist_loader.hpp  mnist_sample.cpp  mnist_sample.hpp
src/filters/: band_pass_filter.cpp  band_pass_filter.hpp  band_stop_filter.cpp  band_stop_filter.hpp  filter.hpp  high_pass_filter.cpp  high_pass_filter.hpp  low_pass_filter.cpp  low_pass_filter.hpp
src/interactions/: convolution.cpp  convolution.hpp  correlation.cpp  correlation.hpp  difference.cpp  difference.hpp  interaction.hpp  mixing.cpp  mixing.hpp  modulation.cpp  modulation.hpp  product.cpp  product.hpp  subtraction.cpp  subtraction.hpp  superposition.cpp  superposition.hpp
src/kernels/: archive.cpp  archive.hpp  archive_builder.cpp  archive_builder.hpp  kernel.cpp  kernel.hpp
src/network/: input_layer.cpp  input_layer.hpp  layer.cpp  layer.hpp  mnist_loader.cpp  mnist_loader.hpp  network.cpp  network.hpp  readout.cpp  readout.hpp  resonator_layer.cpp  resonator_layer.hpp  resonator_layer_2d.cpp  resonator_layer_2d.hpp  resonator_node.cpp  resonator_node.hpp  resonator_node_2d.cpp  resonator_node_2d.hpp
src/operators/: amplitude_scale_operator.cpp  amplitude_scale_operator.hpp  conjugate_operator.cpp  conjugate_operator.hpp  frequency_scale_operator.cpp  frequency_scale_operator.hpp  frequency_shift_operator.cpp  frequency_shift_operator.hpp  operator.hpp  phase_shift_operator.cpp  phase_shift_operator.hpp  time_shift_operator.cpp  time_shift_operator.hpp
src/presets/: band_pass.cpp  band_pass.hpp  band_stop.cpp  band_stop.hpp  gaussian.cpp  gaussian.hpp  high_pass.cpp  high_pass.hpp  low_pass.cpp  low_pass.hpp  preset.cpp  preset.hpp  resonance.cpp  resonance.hpp
src/transforms/: amplitude_scale.cpp  amplitude_scale.hpp  conjugate.cpp  conjugate.hpp  frequency_scale.cpp  frequency_scale.hpp  frequency_shift.cpp  frequency_shift.hpp  phase_shift.cpp  phase_shift.hpp  preset_transform.cpp  preset_transform.hpp  time_shift.cpp  time_shift.hpp  transform.hpp
